tdf#92520: LibO crash when editing .odb database properties

Regression from:
f7424ed710e54bb2437a28380b03ed7c26290edc

Change-Id: I7665d579696f21846abaed21ca8c4f14acdc964c